2006-02-20 [wwp]	2.0.0cvs63

	* src/summary_search.c
		enhancements to the summary search:
			- add the ability to stop the running search
			  (upon ESC-key press, new Stop button or when Clear button is pressed)
			- don't search if no criteria (From/To/Subject/Body) is set
			- ensure that a busy mouse pointer is always shown when searching,
			  show it even a bit earlier

2006-02-19 [colin]	2.0.0cvs62

	* src/compose.c
	* src/imap.c
	* src/etpan/imap-thread.c
	* src/etpan/imap-thread.h
		(Future) IMAP speed improvement on sending
		Will require a libetpan update
	* src/summaryview.c
	* src/gtk/quicksearch.c
		Make quicksearch clearable while running.

2006-02-17 [colin]	2.0.0cvs61

	* src/imap.c
	* src/etpan/imap-thread.c
	* src/etpan/imap-thread.h
		Check for IMAP certificates
		** Requires libetpan-0.42-cvs4 
		** http://claws.sylpheed.org/snapshots/libetpan-0.42cvs4.tar.gz

2006-02-17 [cleroy]	2.0.0cvs60

	* src/messageview.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_message.c
		Add pref to display HTML-only mails with plugin, 
		if possible (defaulting to FALSE of course).

2006-02-16 [cleroy]	2.0.0cvs59

	* src/main.c
	* src/common/plugin.c
	* src/common/plugin.h
	* src/gtk/pluginwindow.c
		Keep track of requested (but unloaded) plugins
		in some error cases.

2006-02-16 [wwp]	2.0.0cvs58

	* src/gtk/gtkaspell.c
	* src/gtk/gtkaspell.h
	* src/prefs_spelling.c
	* src/compose.c
	* src/prefs_common.c
	* src/prefs_common.h
		implemented new optional spellchecker behaviour: re-check message when
		dictionary got changed (from compose-window/context-menu/Change dictionary).

2006-02-16 [wwp]	2.0.0cvs57

	* src/quote_fmt_parse.y
		pclose popen'ed pipe.

2006-02-15 [colin]	2.0.0cvs56

	* src/mimeview.c
	* src/mimeview.h
		Let MimeViewers know which MimeView they
		depend of.
	* src/summaryview.c
		Swap From/To columns in Sent/Queue/Drafts
		folders
	* src/etpan/imap-thread.c
		Use mailstream_low_tls_open() for STARTTLS