@@ -1,3 +1,8 @@
+2006-02-20 [wwp]	2.0.0cvs64
+
+	* src/gtk/gtkutils.c
+		better runtime typecast checks.
+
 2006-02-20 [wwp]	2.0.0cvs63
 
 	* src/summary_search.c
